News for the tz database


Unreleased, experimental changes

  Changes affecting near-future time stamps

    Tocantins will very likely not observe DST starting this spring.
    (Thanks to Steffen Thorsen.)

    Jordan will likely stay at UTC+3 indefinitely, and will not fall
    back this fall.

    Palestine will fall back at 00:00, not 01:00.  (Thanks to Steffen Thorsen.)

  Changes affecting the build procedure

    Avoid long strings in leapseconds.awk to work around a mawk bug.
    (Thanks to Cyril Baurand.)

  Changes affecting documentation and commentary

    New file 'NEWS' that contains release notes like this one.

    Paraguay's law does not specify DST transition time; 00:00 is customary.
    (Thanks to Waldemar Villamayor-Venialbo.)

    Minor capitalization fixes.

  Changes affecting version-control only

    The experimental github repository now contains annotated and
    signed tags for recent releases, e.g., '2013e' for Release 2013e.
    Releases are tagged starting with 2012e; earlier releases were
    done differently, and tags would either not have a simple name or
    not exactly match what was released.

    'make set-timestamps' is now simpler and a bit more portable.


Release 2013e - 2013-09-19 23:50:04 -0700

  Changes affecting near-future time stamps

    This year Fiji will start DST on October 27, not October 20.
    (Thanks to David Wheeler for the heads-up.)  For now, guess that
    Fiji will continue to spring forward the Sunday before the fourth
    Monday in October.

  Changes affecting current and future time zone abbreviations

    Use WIB/WITA/WIT rather than WIT/CIT/EIT for alphabetic Indonesian
    time zone abbreviations since 1932.  (Thanks to George Ziegler,
    Priyadi Iman Nurcahyo, Zakaria, Jason Grimes, Martin Pitt, and
    Benny Lin.)  This affects Asia/Dili, Asia/Jakarta, Asia/Jayapura,
    Asia/Makassar, and Asia/Pontianak.

    Use ART (UTC-3, standard time), rather than WARST (also UTC-3, but